--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
               <th>Daudzums</th> 
             </tr>
             <tr>
-                <td>SKB kopā</td>
+                <td>Sausna kopā</td>
                 <td> <p id="skb"></p></td>
               </tr>
             <tr>
             <tr>
-              <td>Zāles SKB</td>
+              <td>Sausna zāles SKB</td>
               <td><p id="zalesskb"></p></td>
             </tr>
             <tr>
-              <td>Kukurūzas SKB</td>
+              <td>Sausna kukurūzas SKB</td>
               <td><p id="kukuruzaskb"></p></td>
             </tr>
             <tr>
