--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--Govju skaits-->
       <div class="row">
         <div class="col-25">
-          <label for="sausnaone">Sausna I</label>
+          <label for="sausnaone">Sausna % zāles SKB</label>
         </div>
         <div class="col-75">
           <input type="number" id="sausnaone" name="sausna1" placeholder="Ievadi sausnas I %" value="43" required>
@@ -49,7 +49,7 @@
 
       <div class="row">
         <div class="col-25">
-          <label for="sausnatwo">Sausna II</label>
+          <label for="sausnatwo">Sausna % kukurūzas SKB</label>
         </div>
         <div class="col-75">
           <input type="number" id="sausnatwo" name="sausna2" placeholder="Ievadi sausnas II %" value="39" required>
