--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <td><p id="blzale"></p></td>
               </tr>
               <tr>
-                <td>BL kukuruza</td>
+                <td>BL kukurūza</td>
                 <td><p id="blkukur"></p></td>
               </tr>
            
